# petbot

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  idf_component.yml  sdkconfig
components/battery/: CMakeLists.txt
components/battery/includes/: battery.h
components/battery/src/: battery.c
components/camera/: CMakeLists.txt
components/camera/include/: Kconfig.projbuild  camera.h  camera_pins.h  connect_wifi.h
components/camera/src/: camera.c  connect_wifi.c
components/imu/: CMakeLists.txt
components/imu/include/: imu.h
components/imu/src/: imu.c
components/microphone/: CMakeLists.txt
components/microphone/include/: microphone.h
components/microphone/src/: microphone.c
components/motor/: CMakeLists.txt
components/motor/include/: motor.h
components/motor/src/: motor.c
components/pressure_sensor/: CMakeLists.txt
components/pressure_sensor/include/: pressure_sensor.h
components/pressure_sensor/src/: pressure_sensor.c
components/speaker/: CMakeLists.txt
components/speaker/include/: speaker.h
components/speaker/src/: speaker.c
components/wifi/: CMakeLists.txt
components/wifi/include/: dns_server.h  ota.h  storage.h  web_server.h  wifi.h
components/wifi/src/: dns_server.c  ota.c  storage.c  web_server.c  wifi.c
components/wifi_portal/: CMakeLists.txt  wifi_portal.c
components/wifi_portal/include/: wifi_portal.h
main/: CMakeLists.txt  main.c  main.cpp
web/: index.html  logs.html  ota.html  settings.html
web/assets/: main.js  style.css
